# rag_it

./: .env  .gitignore  config.py  docker-compose.yml  makefile  pyproject.toml
evals/: run_eval.py
scripts/: fetch_logs.py  run_chunker.py  run_indexer.py  run_llm.py  run_loader.py  run_rag.py
src/qabot/: indexer.py  logger.py
src/qabot/api/: Dockerfile  main.py
src/qabot/api/dependencies/: client.py
src/qabot/api/responses/: ask.py  health.py
src/qabot/api/routers/: ask.py  health.py  summarize.py
src/qabot/api/schemas/: __init__.py  ask.py  summarize.py
src/qabot/ingest/: chunker.py  loader.py  models.py
src/qabot/llm/: base.py  gateway.py  getway.py  prompts.py
src/qabot/repository/: log_repository.py  models.py
src/qabot/search/: retriever.py  retriver.py
src/qabot/web/: Dockerfile  app.py
tests/: test_chunker.py  test_loader.py
