[project]
name = "rag-it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "docx>=0.2.4",
    "pydantic>=2.11.9",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.1.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]

[tool.black]
line-length = 79
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | build
  | dist
)/
'''

