[project]
name = "rag-it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "bm25>=1.0.0",
    "boto3>=1.40.41",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "faiss-cpu",
    "fastapi>=0.118.0",
    "groq>=0.32.0",
    "pathlib>=1.0.1",
    "pydantic>=2.11.9",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "rank-bm25",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.50.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "uvicorn>=0.37.0",
]

[tool.black]
line-length = 79
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | build
  | dist
)/
'''
